--- a/lab2/lab2-datastructures-notebook.ipynb
+++ b/lab2/lab2-datastructures-notebook.ipynb
@@ -42,17 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n",
+      "[1, 0, 0]\n",
+      "['', '', '']\n",
+      "['a', '', '']\n",
+      "[[], [], []]\n",
+      "[[1], [], []]\n"
+     ]
+    }
+   ],
    "source": [
     "# Explore os elementos das listas. A saída é o que você espera?\n",
-    "s = [0] * 3\n",
+    "s = [0] * 3 # Cria uma lista com \n",
     "print(s)\n",
-    "s[0] += 1\n",
+    "s[0] += 1 # elemento com index 0 é substituido por 1\n",
     "print(s)\n",
     "\n",
-    "s = [''] * 3\n",
+    "s = [''] * 3 \n",
     "print(s)\n",
     "s[0] += 'a'\n",
     "print(s)\n",
@@ -87,18 +100,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "def gcd(a, b):\n",
-    "    \"\"\"Compute the GCD of two positive integers.\"\"\"\n",
-    "    pass  # Your implementation here\n",
+    "    if b > a:\n",
+    "        a,b = b,a\n",
+    "      \n",
+    "    for divisor in range(1,b+1):\n",
+    "        if b % divisor == 0 and a % divisor == 0:\n",
+    "            mdc = divisor\n",
+    "         \n",
+    "    return mdc # Your implementation here\n",
     "    \n",
-    "gcd(10, 25) # => 5\n",
-    "gcd(14, 15) # => 1\n",
-    "gcd(3, 9) # => 3\n",
-    "gcd(1, 1) # => 1"
+    "print(gcd(10, 25)) # => 5\n",
+    "\n",
+    "print(gcd(14, 15)) # => 1\n",
+    "print(gcd(3, 9)) # => 3\n",
+    "print(gcd(1, 1)) # => 1"
    ]
   },
   {
@@ -128,13 +159,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'US', 'CA'}\n",
+      "['CA', 'NY', 'ON']\n",
+      "['CA', 'NY', 'ON']\n"
+     ]
+    }
+   ],
    "source": [
     "def flip_dict(input_dict):\n",
+    "    \n",
+    "    novo_dict = {}\n",
+    "    for chave,valor in input_dict.items():\n",
+    "        if chave not in novo_dict:\n",
+    "            novo_dict(valor) = chave\n",
+    "        else\n",
+    "            novo_dict(valor)\n",
+    "        \n",
+    "\n",
+    "        {\n",
+    "            US: [ CA , US],\n",
+    "            \n",
+    "        }\n",
+    "        \n",
+    "    \n",
     "    \"\"\"Reverse the keys and values of a dictionary.\"\"\"\n",
-    "    pass"
+    "    return novo_dict\n",
+    "\n",
+    "flip_dict({\"CA\": \"US\", \"NY\": \"US\", \"ON\": \"CA\"})"
    ]
   },
   {
@@ -163,9 +221,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[-2, -1, 0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "[0, 3, 6, 9, 2, 5, 8, 1, 4, 7, 0, 3, 6, 9]\n",
+      "['python']\n",
+      "[None, None, None]\n",
+      "[[3, 2, 1, 12], ['a', 'b', 'c', 'aaaa'], [('do',), ['re'], 'mi', ('do', 'do', 'do', 'do')]]\n",
+      "['Y', 'O', 'N']\n",
+      "{8, 2, 3, 5}\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict the output of the following comprehensions. Does the output match what you expect?\n",
     "print([x for x in [1, 2, 3, 4]])\n",
@@ -517,9 +590,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2
 }
+
