--- a/lab2/lab2-datastructures-notebook.ipynb
+++ b/lab2/lab2-datastructures-notebook.ipynb
@@ -159,34 +159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'US', 'CA'}\n",
-      "['CA', 'NY', 'ON']\n",
-      "['CA', 'NY', 'ON']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'US': ['CA', 'NY'], 'CA': ['ON']}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def flip_dict(input_dict):\n",
-    "    \n",
     "    novo_dict = {}\n",
-    "    for chave,valor in input_dict.items():\n",
-    "        if chave not in novo_dict:\n",
-    "            novo_dict(valor) = chave\n",
-    "        else\n",
-    "            novo_dict(valor)\n",
+    "    for chave, valor in input_dict.items():\n",
+    "        if valor not in novo_dict:\n",
+    "            novo_dict[valor] = [chave]\n",
+    "        else:\n",
+    "            novo_dict[valor].append(chave)\n",
     "        \n",
     "\n",
-    "        {\n",
-    "            US: [ CA , US],\n",
-    "            \n",
-    "        }\n",
     "        \n",
     "    \n",
     "    \"\"\"Reverse the keys and values of a dictionary.\"\"\"\n",
@@ -221,8 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,13 +273,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 7, 11, 15]\n",
+      "['Apple', 'Orange', 'Pear']\n",
+      "['apple', 'pear']\n",
+      "[['sam'], ['guido']]\n",
+      "['sam', 'guido']\n",
+      "[('apple', 5), ('orange', 6), ('pear', 4)]\n",
+      "{'apple': 5, 'orange': 6, 'pear': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [1, 3, 5, 7]\n",
     "fruits = ['apple', 'orange', 'pear']\n",
     "people = [\"TA_sam\", \"student_poohbear\", \"TA_guido\", \"student_htiek\"]\n",
+    "\n",
+    "print([2*x+1 for x in nums])\n",
+    "print([a.lower().capitalize() for a in fruits])\n",
+    "print([a[0].upper() for a in fruits])\n",
+    "print([a for a in fruits if \"p\" in a])\n",
+    "\n",
+    "print([a[3:].split(\"_\") for a in people if \"TA\" in a])\n",
+    "print([a[3:] for a in people if a.startswith('TA_')])\n",
+    "\n",
+    "print([(a,len(a)) for a in fruits])\n",
+    "print({a:len(a) for a in fruits})\n",
     "\n",
     "# Add your comprehensions here!"
    ]
@@ -329,6 +354,9 @@
    "outputs": [],
    "source": [
     "def generate_pascal_row(row):\n",
+    "    for i in row:\n",
+    "        new_row = row(i) + row\n",
+    "        \n",
     "    \"\"\"Generate the next row of Pascal's triangle.\"\"\"\n",
     "    pass\n",
     "\n",
@@ -596,4 +624,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
