--- a/lab2/lab2-datastructures-notebook.ipynb
+++ b/lab2/lab2-datastructures-notebook.ipynb
@@ -349,20 +349,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 10, 10, 5, 1]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generate_pascal_row(row):\n",
-    "    for i in row:\n",
-    "        new_row = row(i) + row\n",
-    "        \n",
+    "    new_row = [(row[0])]\n",
+    "    \n",
+    "    for index,valor in enumerate(row):\n",
+    "        if index == len(row)-1:\n",
+    "            break\n",
+    "        new_row.append(row[index] + row[index+1])\n",
+    "    \n",
+    "    new_row.append(row[len(row)-1])\n",
+    "    \n",
     "    \"\"\"Generate the next row of Pascal's triangle.\"\"\"\n",
-    "    pass\n",
+    "    return new_row\n",
     "\n",
     "generate_pascal_row([1, 2, 1])  # => [1, 3, 3, 1]\n",
     "generate_pascal_row([1, 4, 6, 4, 1])  # => [1, 5, 10, 10, 5, 1]\n",
-    "generate_pascal_row([])  # => [1]"
+    "#generate_pascal_row([])  # => [1]"
    ]
   },
   {
@@ -618,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
