--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -52,9 +52,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "import this"
    ]
@@ -70,10 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
    "source": [
+    "print (\"Hello, world!\")\n",
     "# Edit me so that I print out \"Hello, world!\" when run!"
    ]
   },
@@ -104,13 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "408\n",
+      "234168\n"
+     ]
+    }
+   ],
    "source": [
     "def fizzbuzz(n):\n",
     "    \"\"\"Returns the sum of all numbers less than n divisible by 3 or 5.\"\"\"\n",
-    "    pass\n",
+    "    numeros = list()\n",
+    "    for i in range(n+1):\n",
+    "        if i % 3 == 0 or i % 5 == 0:\n",
+    "            numeros.append(i)\n",
+    "        \n",
+    "    soma = sum(numeros)\n",
+    "    return soma\n",
     "\n",
     "print(fizzbuzz(41))  # => 408\n",
     "print(fizzbuzz(1001))"
@@ -146,24 +198,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "196\n",
+      "558\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-50d7226e127c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;31m# Challenge: Only attempt to solve these if you feel very comfortable with this material.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_collatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1000000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_collatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100000000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-39-50d7226e127c>\u001b[0m in \u001b[0;36mmax_collatz_len\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[0mmaximo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdicionario\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[1;32melse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mcollatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mmaximo\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m                 \u001b[0mmaximo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcollatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-39-50d7226e127c>\u001b[0m in \u001b[0;36mcollatz_len\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m                 \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def collatz_len(n):\n",
     "    \"\"\"Computes the length of the Collatz sequence starting at n.\"\"\"\n",
-    "    pass\n",
+    "    numero_original = n\n",
+    "    contador = 1\n",
+    "    while n != 1:\n",
+    "        if n in dicionario:\n",
+    "            \n",
+    "            contador += dicionario[n]\n",
+    "            break\n",
+    "\n",
+    "        else:\n",
+    "            if n % 2 == 0:\n",
+    "            \n",
+    "                n = n / 2\n",
+    "            \n",
+    "            else:\n",
+    "                \n",
+    "                n = 3 * n + 1\n",
+    "        contador +=1\n",
+    "\n",
+    "    dicionario[numero_original] = contador\n",
+    "    return contador\n",
     "\n",
     "def max_collatz_len(n):\n",
     "    \"\"\"Computes the longest Collatz sequence length for starting numbers less than n\"\"\"\n",
-    "    pass\n",
+    "    maximo = 0\n",
+    "    for i in range(2,n):\n",
+    "        if i in dicionario:\n",
+    "            if dicionario[i]>maximo:\n",
+    "                maximo = dicionario[i]\n",
+    "        else :\n",
+    "            if collatz_len(i) > maximo:\n",
+    "                maximo = collatz_len(i)\n",
+    "    \n",
+    "    return maximo\n",
     "\n",
+    "dicionario = {}\n",
     "print(collatz_len(13))  # => 10\n",
     "print(max_collatz_len(1000))\n",
     "\n",
     "# Challenge: Only attempt to solve these if you feel very comfortable with this material.\n",
-    "# print(max_collatz_len(1000000))\n",
-    "# print(max_collatz_len(100000000))\n"
+    "print(max_collatz_len(1000000))\n",
+    "print(max_collatz_len(100000000))\n"
    ]
   },
   {
@@ -192,17 +296,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature F? 10\n",
+      "It is  -12.22 degrees Celsius.\n"
+     ]
+    }
+   ],
    "source": [
     "def convert_fahr_to_cels(deg_fahr):\n",
-    "    \"\"\"Convert a temperature given in degrees Fahrenheit to degrees Celcius.\"\"\"\n",
-    "    pass\n",
+    "    \"\"\"Convert a temperature given in degrees Fahrenheit to degrees Celsius.\"\"\"\n",
+    "    Celsius = (deg_fahr - 32) / 1.8 \n",
+    "    return Celsius\n",
     "\n",
     "def convert():\n",
     "    \"\"\"Ask the user for a temperature in degrees Fahrenheir, and print out the temperature in degrees Celsius.\"\"\"\n",
-    "    pass"
+    "    F = eval(input(\"Temperature F? \"))\n",
+    "    print(\"It is \", round(convert_fahr_to_cels(F),2), \"degrees Celsius.\")\n",
+    "    return\n",
+    "\n",
+    "convert()"
    ]
   },
   {
@@ -237,14 +355,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " X | . | .\n",
+      "-----------\n",
+      " . | O | .\n",
+      "-----------\n",
+      " . | O | X\n"
+     ]
+    }
+   ],
    "source": [
     "# Print a tic-tac-toe board using optional arguments.\n",
     "def print_tictactoe():\n",
     "    \"\"\"Print out a specific partially-filled tic-tac-toe board.\"\"\"\n",
-    "    pass"
+    "    linhas = [\" X | . | .\",\n",
+    "              \" . | O | .\",\n",
+    "              \" . | O | X\"]\n",
+    "    for i in range(3):\n",
+    "        print(linhas[i])\n",
+    "        if i < 2:\n",
+    "            print(\"-----------\")\n",
+    "    pass\n",
+    "\n",
+    "print_tictactoe()"
    ]
   },
   {
@@ -280,13 +419,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  |  |  H  |  |  H  |  | \n",
+      "--+--+--H--+--+--H--+--+--\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "--+--+--H--+--+--H--+--+--\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "========+========+========\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "--+--+--H--+--+--H--+--+--\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "--+--+--H--+--+--H--+--+--\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "========+========+========\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "--+--+--H--+--+--H--+--+--\n",
+      "  |  |  H  |  |  H  |  | \n",
+      "--+--+--H--+--+--H--+--+--\n",
+      "  |  |  H  |  |  H  |  | \n"
+     ]
+    }
+   ],
    "source": [
     "def print_super_tictactoe():\n",
     "    \"\"\"Print an empty SUPER tic-tac-toe board.\"\"\"\n",
-    "    pass"
+    "    linha1 = \"  |  |  H  |  |  H  |  | \"\n",
+    "    linha2 = \"--+--+--H--+--+--H--+--+--\"\n",
+    "    separador = \"========+========+========\"\n",
+    "    for i in range(1,18):\n",
+    "        if i % 6 == 0:\n",
+    "            print(separador)\n",
+    "        elif i % 2 == 0:\n",
+    "            print(linha2)\n",
+    "        else:\n",
+    "            print(linha1)\n",
+    "    pass\n",
+    "    \n",
+    "print_super_tictactoe()"
    ]
   },
   {
@@ -324,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
