--- a/lab2/lab2-datastructures-notebook.ipynb
+++ b/lab2/lab2-datastructures-notebook.ipynb
@@ -42,22 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0]\n",
-      "[1, 0, 0]\n",
-      "['', '', '']\n",
-      "['a', '', '']\n",
-      "[[], [], []]\n",
-      "[[1], [], []]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Explore os elementos das listas. A saída é o que você espera?\n",
     "s = [0] * 3 # Cria uma lista com \n",
@@ -100,20 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "1\n",
-      "3\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gcd(a, b):\n",
     "    if b > a:\n",
@@ -159,20 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'US': ['CA', 'NY'], 'CA': ['ON']}"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def flip_dict(input_dict):\n",
     "    novo_dict = {}\n",
@@ -217,26 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n",
-      "[-2, -1, 0, 1, 2, 3, 4, 5, 6, 7]\n",
-      "[0, 3, 6, 9, 2, 5, 8, 1, 4, 7, 0, 3, 6, 9]\n",
-      "['python']\n",
-      "[None, None, None]\n",
-      "[[3, 2, 1, 12], ['a', 'b', 'c', 'aaaa'], [('do',), ['re'], 'mi', ('do', 'do', 'do', 'do')]]\n",
-      "['Y', 'O', 'N']\n",
-      "{8, 2, 3, 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Predict the output of the following comprehensions. Does the output match what you expect?\n",
     "print([x for x in [1, 2, 3, 4]])\n",
@@ -273,25 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 7, 11, 15]\n",
-      "['Apple', 'Orange', 'Pear']\n",
-      "['apple', 'pear']\n",
-      "[['sam'], ['guido']]\n",
-      "['sam', 'guido']\n",
-      "[('apple', 5), ('orange', 6), ('pear', 4)]\n",
-      "{'apple': 5, 'orange': 6, 'pear': 4}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nums = [1, 3, 5, 7]\n",
     "fruits = ['apple', 'orange', 'pear']\n",
@@ -349,37 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 5, 10, 10, 5, 1]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generate_pascal_row(row):\n",
-    "    new_row = [(row[0])]\n",
-    "    \n",
-    "    for index,valor in enumerate(row):\n",
-    "        if index == len(row)-1:\n",
-    "            break\n",
-    "        new_row.append(row[index] + row[index+1])\n",
-    "    \n",
-    "    new_row.append(row[len(row)-1])\n",
-    "    \n",
     "    \"\"\"Generate the next row of Pascal's triangle.\"\"\"\n",
+    "    linha1 = row + [0]\n",
+    "    linha2 = [0] + row\n",
+    "    new_row = list()\n",
+    "    for i in range(len(linha1)):\n",
+    "        new_row.append(linha1[i] + linha2[i])\n",
+    "    \n",
+    "    if len(new_row) == 1:\n",
+    "        new_row[0] = 1\n",
+    "        \n",
     "    return new_row\n",
     "\n",
-    "generate_pascal_row([1, 2, 1])  # => [1, 3, 3, 1]\n",
-    "generate_pascal_row([1, 4, 6, 4, 1])  # => [1, 5, 10, 10, 5, 1]\n",
-    "#generate_pascal_row([])  # => [1]"
+    "print(generate_pascal_row([1, 2, 1]))  # => [1, 3, 3, 1]\n",
+    "print(generate_pascal_row([1, 4, 6, 4, 1]))  # => [1, 5, 10, 10, 5, 1]\n",
+    "print(generate_pascal_row([]))  # => [1]"
    ]
   },
   {
@@ -409,7 +334,12 @@
    "source": [
     "def print_pascal_triangle(n):\n",
     "    \"\"\"Print the first n rows of Pascal's triangle.\"\"\"\n",
-    "    pass"
+    "    pascal_triangle = ([1])\n",
+    "    for i in range(n):\n",
+    "        pascal_triangle.append(generate_pascal_row(pascal_triangle[i]))\n",
+    "    pass\n",
+    "\n",
+    "print_pascal_triangle(2)"
    ]
   },
   {
@@ -429,17 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "235886\n"
+     ]
+    }
+   ],
    "source": [
     "# If you downloaded words from the course website,\n",
     "# change me to the path to the downloaded file.\n",
-    "DICTIONARY_FILE = '/usr/share/dict/words'\n",
+    "DICTIONARY_FILE = 'C:/Users/fernando.drummond/Documents/aulas-python/big-data-cotemig/words'\n",
     "\n",
     "def load_english():\n",
     "    \"\"\"Load and return a collection of english words from a file.\"\"\"\n",
-    "    pass\n",
+    "    file = list(open(DICTIONARY_FILE, \"r\"))\n",
+    "    for i in range(len(file)):\n",
+    "        file[i] = file[i].replace('\\n', '')\n",
+    "    return file\n",
     "\n",
     "english = load_english()\n",
     "print(len(english))"
@@ -477,15 +418,61 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def is_triad_word(word, english):\n",
     "    \"\"\"Return whether a word is a triad word.\"\"\"\n",
-    "    pass\n",
+    "    palavra1 = \"\"\n",
+    "    palavra2 = \"\"\n",
+    "    for i,letter in enumerate(word):\n",
+    "        if i % 2 == 0:\n",
+    "            palavra1 += letter\n",
+    "        else:\n",
+    "            palavra2 += letter\n",
+    "    retorno = False\n",
+    "    if palavra1 in english and palavra2 in english:\n",
+    "        retorno = True\n",
     "    \n",
-    "def is_triad_phrase(phrase, english):\n",
+    "    return retorno\n",
+    "    \n",
+    "def is_triad_phrase(phrase, english = english):\n",
     "    \"\"\"Return whether a phrase is composed of only triad words.\"\"\"\n",
-    "    pass"
+    "    words = phrase.split(\" \")\n",
+    "    resposta = False\n",
+    "    for palavra in words:\n",
+    "        if is_triad_word(palavra, english) == True: \n",
+    "            resposta = True \n",
+    "    return resposta\n",
+    "\n",
+    "print(is_triad_phrase(\"learned theorem\")) # => True\n",
+    "print(is_triad_phrase(\"studied theories\")) # => False\n",
+    "print(is_triad_phrase(\"wooded agrarians\")) # => True\n",
+    "print(is_triad_phrase(\"forrested farmers\")) # => False\n",
+    "print(is_triad_phrase(\"schooled oriole\")) # => True\n",
+    "print(is_triad_phrase(\"educated small bird\")) # => False\n",
+    "print(is_triad_phrase(\"a\")) # => False\n",
+    "print(is_triad_phrase(\"\")) # => False\n",
+    "\n",
+    "todas_palavras = [word for word in english if is_triad_word(word,english)]\n",
+    "#for item in english[1:5000]:\n",
+    "#    if is_triad_word(item,english):\n",
+    "#        todas_palavras.append(item)\n",
+    "print(len(todas_palavras))"
    ]
   },
   {
