--- a/lab2/lab2-datastructures-notebook.ipynb
+++ b/lab2/lab2-datastructures-notebook.ipynb
@@ -514,9 +514,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def character_gap(ch1, ch2):\n",
     "    \"\"\"Return the absolute gap between two characters.\"\"\"\n",
@@ -524,10 +539,30 @@
     "\n",
     "def is_surpassing_word(word):\n",
     "    \"\"\"Return whether a word is surpassing.\"\"\"\n",
-    "    pass\n",
+    "    distancia = 0\n",
+    "    for i,letter in enumerate(word):\n",
+    "        nova_distancia = character_gap(letter,word[i-1])\n",
+    "        if nova_distancia <= distancia and i != 1:\n",
+    "            return False\n",
+    "        distancia = nova_distancia\n",
+    "    return True\n",
     "\n",
-    "def is_surpassing_phrase(word):\n",
-    "    \"\"\"Return whether a word is surpassing.\"\"\""
+    "def is_surpassing_phrase(phrase):\n",
+    "    \"\"\"Return whether a word is surpassing.\"\"\"\n",
+    "    words = phrase.split()\n",
+    "    for word in words:\n",
+    "        if is_surpassing_word(word) == False:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "print(is_surpassing_phrase(\"superb subway\")) # => True\n",
+    "print(is_surpassing_phrase(\"excellent train\")) # => False\n",
+    "print(is_surpassing_phrase(\"porky hogs\")) # => True\n",
+    "print(is_surpassing_phrase(\"plump pigs\")) # => False\n",
+    "print(is_surpassing_phrase(\"turnip fields\")) # => True\n",
+    "print(is_surpassing_phrase(\"root vegetable lands\")) # => False\n",
+    "print(is_surpassing_phrase(\"a\")) # => True\n",
+    "print(is_surpassing_phrase(\"\")) # => True"
    ]
   },
   {
@@ -558,15 +593,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'is_surpassing_word' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-632f18c8d09c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m#print(is_cyclone_word(\"adjourned\"))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mis_cyclone_word\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"12345678\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-33-632f18c8d09c>\u001b[0m in \u001b[0;36mis_cyclone_word\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mnew_word\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_word\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mis_surpassing_word\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_word\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mis_cyclone_phrase\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'is_surpassing_word' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def is_cyclone_word(word):\n",
     "    \"\"\"Return whether a word is a cyclone word.\"\"\"\n",
+    "    new_word = \"\"\n",
+    "    \n",
+    "    for i,letter in enumerate(word): \n",
+    "        if i < len(word)/2:\n",
+    "            new_word += letter + word[-(i+1)]\n",
+    "        \n",
+    "    if len(word) % 2 != 0:\n",
+    "        new_word = new_word[:-1]\n",
+    "    \n",
+    "    return is_surpassing_word(new_word)\n",
     "    \n",
     "def is_cyclone_phrase(word):\n",
-    "    \"\"\"Return whether a phrase is composed only of cyclone words.\"\"\""
+    "    \"\"\"Return whether a phrase is composed only of cyclone words.\"\"\"\n",
+    "    pass\n",
+    "\n",
+    "#print(is_cyclone_word(\"adjourned\"))\n",
+    "print(is_cyclone_word(\"12345678\"))"
    ]
   },
   {
