--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -66,19 +66,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, -2, 0]\n",
+      "[5, 5]\n",
+      "['olleh', 'dlrow']\n",
+      "[(2, 4, 8), (3, 9, 27), (4, 16, 64), (5, 25, 125)]\n",
+      "[6, 15, 28]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write `map` expressions to convert the following inputs into the indicated outputs.\n",
+    "\n",
+    "\n",
+    "x = ['12', '-2', '0']\n",
+    "print(list(map(int,x)))\n",
     "# ['12', '-2', '0'] --> [12, -2, 0]\n",
     "\n",
+    "\n",
+    "x = ['hello', 'world']\n",
+    "print(list(map(len,x)))\n",
     "# ['hello', 'world'] --> [5, 5]\n",
     "\n",
-    "# ['hello', 'world']` --> ['olleh', 'dlrow']\n",
     "\n",
+    "x = ['hello', 'world']\n",
+    "print(list(map(lambda y: y[::-1],x)))\n",
+    "# ['hello', 'world'] --> ['olleh', 'dlrow']\n",
+    "\n",
+    "x = range(2, 6)\n",
+    "print(list(map(lambda y: (y, y*y, y*y*y), x)))\n",
     "# range(2, 6) --> [(2, 4, 8), (3, 9, 27), (4, 16, 64), (5, 25, 125)]\n",
     "\n",
+    "x = zip(range(2,5), range(3,9,2))\n",
+    "print(list(map(lambda x: x[0] * x[1], x)))\n",
     "# zip(range(2, 5), range(3, 9, 2)) --> [6, 15, 28]\n"
    ]
   },
@@ -121,17 +147,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['12', '0']\n",
+      "['world']\n",
+      "['Stanford']\n",
+      "[0, 3, 5, 6, 9, 10, 12, 15, 18]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write `filter` expressions to convert the following inputs into the indicated outputs.\n",
+    "\n",
+    "x = ['12', '-2', '0']\n",
+    "print(list(filter(lambda x: int(x,10) >= 0, x)))\n",
     "# ['12', '-2', '0'] --> ['12', '0']\n",
     "\n",
+    "\n",
+    "x = ['hello', 'world']\n",
+    "print(list(filter(lambda x: \"w\" in x, x)))\n",
     "# ['hello', 'world'] --> ['world']\n",
     "\n",
+    "x = ['Stanford', 'Cal', 'UCLA']\n",
+    "print(list(filter(lambda x: len(x) > 4, x)))\n",
     "# ['Stanford', 'Cal', 'UCLA'] --> ['Stanford']\n",
     "\n",
+    "x = range(20)\n",
+    "print(list(filter(lambda x: x % 3 == 0 or x % 5 == 0, x)))\n",
     "# range(20) --> [0, 3, 5, 6, 9, 10, 12, 15, 18]\n"
    ]
   },
@@ -161,15 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "159\n",
+      "873\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
+    "import functools\n",
     "from functools import reduce\n",
     "\n",
     "def reduce_sum(*nums):\n",
-    "    pass # Your implementation here. Use `reduce`. This function can be implemented in only one line!\n",
-    "\n",
+    "    if nums is (): return 0\n",
+    "    return functools.reduce(lambda x, y: x + y, nums)\n",
+    "    \n",
     "print(reduce_sum(3, 5))\n",
     "print(reduce_sum(41, 106, 12))\n",
     "print(reduce_sum(1, 2, 6, 24, 120, 720))\n",
@@ -201,19 +262,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "5040\n"
+     ]
+    }
+   ],
    "source": [
     "import operator\n",
     "from functools import reduce\n",
     "\n",
     "def fact(n):\n",
     "    \"\"\"Return the factorial of a positive number.\"\"\"\n",
+    "    return functools.reduce(operator.mul, range(1,n+1))\n",
     "    # Your implementation here: Use reduce, an operator, and only one line!\n",
     "\n",
-    "fact(3)  # => 6\n",
-    "fact(7)  # => 5040"
+    "print(fact(3))  # => 6\n",
+    "print(fact(7))  # => 5040"
    ]
   },
   {
@@ -255,6 +326,7 @@
     "\n",
     "def two_best(words):\n",
     "    \"\"\"Return the two words whose alphanumeric score of uppercase letters is the highest.\"\"\"\n",
+    "    filter(max,words)\n",
     "    pass  # Your implementation here\n",
     "\n",
     "two_best(['hEllO', 'wOrLD', 'i', 'aM', 'PyThOn'])"
@@ -885,7 +957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
