--- a/lab5/lab5-oop-notebook.ipynb
+++ b/lab5/lab5-oop-notebook.ipynb
@@ -90,9 +90,11 @@
    "source": [
     "stanford_python = StanfordCourse(\"CS\", \"41\", \"hap.py code: the python programming language\")\n",
     "\n",
-    "print()  # Print out the department of stanford_python\n",
-    "print()  # Print out the code of stanford_python\n",
-    "print()  # Print out the title of stanford_python"
+    "help(StanfordCourse)\n",
+    "stanford_python = StanfordCourse(\"CS\", \"41\", \"hap.py code: the python programming language\")\n",
+    "print(stanford_python.department)  # Print out the department of stanford_python\n",
+    "print(stanford_python.code)  # Print out the code of stanford_python\n",
+    "print(stanford_python.title)  # Print out the title of stanford_python"
    ]
   },
   {
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,16 +161,17 @@
     "b = StanfordCSCourse(\"CS\", \"106B\", \"Programming Abstractions\")\n",
     "x = StanfordCSCourse(\"CS\", \"106X\", \"Programming Abstractions\", recorded=True)\n",
     "\n",
-    "print(type(a))\n",
-    "print(isinstance(a, StanfordCourse))\n",
-    "print(isinstance(b, StanfordCourse))\n",
-    "print(isinstance(x, StanfordCourse))\n",
-    "print(isinstance(x, StanfordCSCourse))\n",
-    "print(issubclass(StanfordCourse, StanfordCSCourse))\n",
-    "print(type(a) == type(b))\n",
-    "print(type(b) == type(x))\n",
-    "print(a == b)\n",
-    "print(b == x)"
+    "print(type(a)) #tipo classe, pois tem origem na classe criada inicialmente\n",
+    "print(type(b))\n",
+    "print(isinstance(a, StanfordCourse)) #verdadeiro\n",
+    "print(isinstance(b, StanfordCourse)) #verdadeiro\n",
+    "print(isinstance(x, StanfordCourse)) #verdadeiro\n",
+    "print(isinstance(x, StanfordCSCourse)) #verdadeiro\n",
+    "print(issubclass(StanfordCourse, StanfordCSCourse)) #falso, pois as duas classes não possuem hierarquia subordinada\n",
+    "print(type(a) == type(b)) #falso, pois apesar de serem as duas do tipo classe, elas são classes/tipo diferentes\n",
+    "print(type(b) == type(x)) #verdadeiro, são da mesma classe\n",
+    "print(a == b) #falso, classes e objetos diferentes\n",
+    "print(b == x) #falso, apesas de mesma classe, os objetos são diferentes pela presença do \"recorded\""
    ]
   },
   {
@@ -186,21 +189,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "from datetime import date\n",
+    "\n",
     "class StanfordCourse:\n",
     "    def __init__(self, department, code, title):\n",
     "        self.department = department\n",
     "        self.code = code\n",
     "        self.title = title\n",
+    "        self.attendance = {}\n",
+    "        self.students = list()\n",
+    "        self.student = \"\"\n",
     "        \n",
-    "    def mark_attendance(*students):\n",
-    "        pass\n",
+    "    def mark_attendance(self, *students):\n",
+    "        self.attendance[date.today()] = set(students)\n",
     "    \n",
-    "    def is_present(student):\n",
-    "        pass\n"
+    "    def is_present(self, student, data=date.today()):\n",
+    "        return student in self.attendance[data]\n",
+    "\n",
+    "    \n",
+    "p = StanfordCourse(\"CS\",\"41\",\"Computer Science\")\n",
+    "\n",
+    "p.mark_attendance(\"James\",\"Rieder\",\"Allen\",\"Grace\")\n",
+    "print(p.is_present(\"James\"))"
    ]
   },
   {
@@ -231,24 +253,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import date\n",
+    "from functools import total_ordering\n",
+    "\n",
+    "@total_ordering\n",
     "class StanfordCourse:\n",
     "    def __init__(self, department, code, title):\n",
     "        self.department = department\n",
     "        self.code = code\n",
     "        self.title = title\n",
+    "        self.attendance = {}\n",
+    "        self.students = list()\n",
+    "        self.student = \"\"\n",
     "        \n",
-    "    def mark_attendance(*students):\n",
-    "        pass\n",
+    "    def mark_attendance(self, *students):\n",
+    "        self.attendance[date.today()] = set(students)\n",
     "    \n",
+    "    def is_present(self, student, data=date.today()):\n",
+    "        return student in self.attendance[data]\n",
+    "    \n",
+    "    def numero_inteiro(self):\n",
+    "        if type(self.code) == str:\n",
+    "            return int(\"\".join(list(filter(str.isnumeric, self.code))))\n",
+    "        else:\n",
+    "            return self.code\n",
+    "            \n",
     "    def __le__(self, other):\n",
-    "        pass\n",
+    "        if self.department != other.department:\n",
+    "            return NotImplemented\n",
+    "        return self.numero_inteiro() < other.numero_inteiro()\n",
     "    \n",
     "    def __eq__(self, other):\n",
-    "        pass"
+    "        if self.department != other.department:\n",
+    "            return NotImplemented\n",
+    "        return self.code == other.code"
    ]
   },
   {
@@ -262,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,9 +314,14 @@
     "cs107 = StanfordCSCourse(\"CS\", \"107\", \"Computer Organzation and Systems\")\n",
     "cs110 = StanfordCSCourse(\"CS\", \"110\", \"Principles of Computer Systems\")\n",
     "\n",
+    "\n",
+    "\n",
     "courses = [cs110, cs106a, cs107, cs106b]\n",
+    "courses\n",
+    "\n",
     "courses.sort()\n",
-    "courses # => [cs106a, cs106b, cs107, cs110]"
+    "\n",
+    "#courses # => [cs106a, cs106b, cs107, cs110]"
    ]
   },
   {
@@ -296,6 +343,7 @@
    "source": [
     "class CourseCatalog:\n",
     "    def __init__(self, courses):\n",
+    "        \n",
     "        pass\n",
     "       \n",
     "    def courses_by_department(self, department_name):\n",
@@ -394,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,9 +487,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Biking one mile\n",
+      "Biking one mile\n",
+      "Biking one mile\n",
+      "Biking one mile\n",
+      "Biking one mile\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n",
+      "Driving one mile\n"
+     ]
+    }
+   ],
    "source": [
     "print(isinstance(t, Transportation))\n",
     "\n",
