--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,68 +198,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "10\n",
-      "196\n",
-      "558\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-50d7226e127c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;31m# Challenge: Only attempt to solve these if you feel very comfortable with this material.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_collatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1000000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_collatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100000000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-39-50d7226e127c>\u001b[0m in \u001b[0;36mmax_collatz_len\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[0mmaximo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdicionario\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[1;32melse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mcollatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mmaximo\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m                 \u001b[0mmaximo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcollatz_len\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-39-50d7226e127c>\u001b[0m in \u001b[0;36mcollatz_len\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m                 \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "112\n",
+      "153\n",
+      "108\n"
      ]
     }
    ],
    "source": [
     "def collatz_len(n):\n",
     "    \"\"\"Computes the length of the Collatz sequence starting at n.\"\"\"\n",
-    "    numero_original = n\n",
-    "    contador = 1\n",
-    "    while n != 1:\n",
-    "        if n in dicionario:\n",
-    "            \n",
-    "            contador += dicionario[n]\n",
-    "            break\n",
-    "\n",
-    "        else:\n",
-    "            if n % 2 == 0:\n",
-    "            \n",
-    "                n = n / 2\n",
-    "            \n",
-    "            else:\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    if n in dicionario:\n",
+    "        return dicionario[n]\n",
+    "    \n",
+    "    if n % 2 == 0:\n",
+    "        dicionario[n] = collatz_len(n/2) + 1\n",
+    "     \n",
+    "    else:\n",
     "                \n",
-    "                n = 3 * n + 1\n",
-    "        contador +=1\n",
-    "\n",
-    "    dicionario[numero_original] = contador\n",
-    "    return contador\n",
+    "        dicionario[n] = collatz_len(3 * n + 1) + 1\n",
+    "        \n",
+    "    return dicionario[n]\n",
     "\n",
     "def max_collatz_len(n):\n",
     "    \"\"\"Computes the longest Collatz sequence length for starting numbers less than n\"\"\"\n",
-    "    maximo = 0\n",
-    "    for i in range(2,n):\n",
-    "        if i in dicionario:\n",
-    "            if dicionario[i]>maximo:\n",
-    "                maximo = dicionario[i]\n",
-    "        else :\n",
-    "            if collatz_len(i) > maximo:\n",
-    "                maximo = collatz_len(i)\n",
-    "    \n",
-    "    return maximo\n",
+    "    return max(collatz_len(n) for i in range(n // 2,n))\n",
     "\n",
     "dicionario = {}\n",
     "print(collatz_len(13))  # => 10\n",
@@ -296,18 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Temperature F? 10\n",
-      "It is  -12.22 degrees Celsius.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convert_fahr_to_cels(deg_fahr):\n",
     "    \"\"\"Convert a temperature given in degrees Fahrenheit to degrees Celsius.\"\"\"\n",
@@ -355,21 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " X | . | .\n",
-      "-----------\n",
-      " . | O | .\n",
-      "-----------\n",
-      " . | O | X\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print a tic-tac-toe board using optional arguments.\n",
     "def print_tictactoe():\n",
@@ -419,33 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  |  |  H  |  |  H  |  | \n",
-      "--+--+--H--+--+--H--+--+--\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "--+--+--H--+--+--H--+--+--\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "========+========+========\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "--+--+--H--+--+--H--+--+--\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "--+--+--H--+--+--H--+--+--\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "========+========+========\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "--+--+--H--+--+--H--+--+--\n",
-      "  |  |  H  |  |  H  |  | \n",
-      "--+--+--H--+--+--H--+--+--\n",
-      "  |  |  H  |  |  H  |  | \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_super_tictactoe():\n",
     "    \"\"\"Print an empty SUPER tic-tac-toe board.\"\"\"\n",
